feat: Minimum block rewards to send notifications
Flexpool is now finding more blocks than ever. There are tons of notifications
all day long. This commit adds a new pool setting `min-block-reward` to send
notifications for blocks reaching this minimum threshold, so we can focus on
big blocks.

Signed-off-by: Julien Riou <julien@riou.xyz>

--- a/flexassistant.yaml.example
+++ b/flexassistant.yaml.example
@@ -14,8 +14,10 @@ miners:
 pools:
   - coin: eth
     enable-blocks: true
+    min-block-reward: 10
   - coin: xch
     enable-blocks: true
+    min-block-reward: 1.79
 telegram:
   chat-id: 000000000
   channel-name: MyTelegramChannel
